/art horizontal overflow fix

--- a/public/styles/art.css
+++ b/public/styles/art.css
@@ -14,6 +14,7 @@ h1, h2, h3, h4, h5, h6 {
 .container-fluid {
   padding: 1% 3%;
   position: relative;
+  overflow-x: hidden;
 }
 
 /**** NAVIGATION SECTION ****/
@@ -21,6 +22,7 @@ h1, h2, h3, h4, h5, h6 {
 #myNavbar {
   background-color: #241d26;
   padding-left: 1%;
+  padding-right: 1%;
 }
 
 .navigation-section .container-fluid {
@@ -40,6 +42,10 @@ h1, h2, h3, h4, h5, h6 {
 .navbar-brand p {
   color: #ff9595;
   display: inline;
+}
+
+.navbar-toggler {
+  margin: 0;
 }
 
 .art-work {
